# gemini-draw

./: .gitignore  README.md  SKILL.md  pyproject.toml
gemini_draw/: __init__.py  cli.py  exceptions.py  gemini_draw.py  login_init.py  utils.py
references/: LESSONS-LEARNED.md  PLATFORM-PORTING.md
scripts/: gemini_draw.py  gemini_e2e_v9.py  init_login.py
tests/: test_integration.py
